# Mind

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AUTONOMOUS_REPOS_DELIVERY.md  COMIC_STUDIO_GUIDE.md  EXAMPLES.md  EXECUTIVE_SUMMARY.md  FILE_MANIFEST.md  LLMSETUP.md  PHASES_ROADMAP.md  SIMPLE_GUIDE.md  VISUAL_GUIDE.md  cli.py  conftest.py  demo_comic_studio.py  pyproject.toml  requirements.txt  run_meta_pipeline.py  setup.cfg  test_llm_setup.py
agents/: agent_architect_agent.py  base_agent.py  boundary_setter_agent.py  delegator_agent.py  echo_agent.py  evaluator_agent.py  evolution_engine_agent.py  execution_planner_agent.py  goal_interpreter_agent.py  system_designer_agent.py  tool_selector_agent.py
benchmarks/: animation_studio_cases.json  results_latest.json  results_phi_few_shot_v3.json  results_phi_quick.json  results_phi_quick_improved.json  results_phi_quick_improved_v2.json  results_qwen_quick.json  scoring_rubric.json
cognition/: thinking_protocol.py
core/: blueprint_loader.py  identity.py  meta_orchestrator.py  mind_orchestrator.py  orchestrator.py
docs/: ARCHITECTURE_AUTONOMOUS_REPOS.md  AUTONOMOUS_REPOSITORY_GENERATION.md  IMPLEMENTATION_AUTONOMOUS_REPOS.md  LLM_SELECTION_MATRIX.md  MIND_LEARNING_SYSTEM.md  NEWSCAST_CHARACTER_SYSTEM.md  NEWSCAST_CURRENT_STATE.md  NEWSCAST_ROADMAP.md  PHI_SETUP_GUIDE.md  QUICKSTART_AUTONOMOUS_REPOS.md  README.md  UNIVERSAL_REASONING_LAYER.md  architecture.md  blueprints.md  cli_guide.md  development.md  distributed_cli_examples.md  llm_integration.md  phase_8_memory.md  phase_9_evolution.md  (+1 more)
(+138 files in other folders)
